# f1-winner-prediction

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  deploy.sh  download_data.py  openapi.yaml  project.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  sonar-project-local.properties  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr.yml  release.yml  sonar.yml
deploy/k8s/: deployment.yaml  job.yaml  namespace.yaml  pvc.yaml  service.yaml
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  03_linear_regression_model.ipynb
src/: api.py  data_utils.py  predict_winner.py
tests/: test_api.py  test_data_utils.py  test_predict_winner.py
