[project]
name = "f1-winner-prediction"
version = "1.0.0"
description = "Machine learning API for predicting Formula 1 race winners using linear regression"
authors = [{name = "rmidhun23"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["f1", "machine-learning", "prediction", "api", "linear-regression"]
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "joblib>=1.3.1",
    "flask>=2.3.2",
]

[project.urls]
Homepage = "https://github.com/rmidhun23/f1-winner-prediction"
Repository = "https://github.com/rmidhun23/f1-winner-prediction"
Issues = "https://github.com/rmidhun23/f1-winner-prediction/issues"
Documentation = "https://github.com/rmidhun23/f1-winner-prediction#readme"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "ruff>=0.0.287",
    "codespell>=2.2.5",
    "toml>=0.10.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
force_single_line = false
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "W", "F", "B", "C4", "UP"]
ignore = ["E501", "B008"]
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B104", "B301"]  # Skip assert_used, hardcoded_bind_all_interfaces, pickle
